--- a/pruebafinal1.html
+++ b/pruebafinal1.html
@@ -2,47 +2,47 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css"
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css"
         type="text/css">
-    <link rel="stylesheet" href="pruebafinal1.css">
+    <link rel="stylesheet" href="css/pruebafinal1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>MISPERRIS</title>
 </head>
-
 <body>
     <header>
-
         <!-- NAVEGADOR Y LOGO -->
         <nav class="navegador">
-            <img class="logo" src="logo.jpg" alt="mis perris">
+            <img class="logo" src="imagenes/logo.jpg" alt="mis perris">
             <div class="menu">
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Quienes Somos</a></li>
-                    <li><a href="#">Galeria</a></li>
-                    <li><a href="#">Contactanos</a></li>
+                    <li><a href="#centro">Quienes Somos</a></li>
+                    <li><a href="#galeria">Galeria</a></li>
+                    <li><a href="#footer">Contactanos</a></li>
                 </ul>
-
-
         </nav>
     </header>
     <!-- FOTO PRINCIPAL -->
     <ARTIcle>
-        <section>
-            <img class="fotoprincipal" src="Tom.jpg" alt="fotoprincipal">
+        <section class="contenedor">
+            <img class="fotoprincipal" src="imagenes/Tom.jpg" alt="fotoprincipal">
+            <div class="fondoizquierda">
+                <p class="textofondoizquierda">"Estamos felices <br>de recibir a Tom en <br> casa. Es un super
+                    <br> buen compañero"</p>
+            </div> 
         </section>
         <br>
         <!-- BOTONES -->
-        <section class="botones">
-            <a href="URL" target="_blank"><img alt="Sigueme" height="53" width="53"
+            <section class="botones">
+            <a href="#footer" ><img alt="Sigueme" height="53" width="53"
                     src="https://4.bp.blogspot.com/-Ilxti1UuUuI/XCrIy6hBAcI/AAAAAAAAH_k/QV5KbuB9p3QB064J08W2v-YRiuslTZnLgCLcBGAs/s1600/instagram.png"
                     title="Sigueme" /></a>
-            <a href="URL" target="_blank"><img alt="Sigueme" height="53" width="53"
+            <a href="#footer" ><img alt="Sigueme" height="53" width="53"
                     src="https://2.bp.blogspot.com/-28mh2hZK3HE/XCrIxxSCW0I/AAAAAAAAH_M/XniFGT5c2lsaVNgf7UTbPufVmIkBPnWQQCLcBGAs/s1600/facebook.png"
                     title="Sigueme" /></a>
-            <a href="URL" target="_blank"><img alt="Sígueme" height="53" width="53"
+            <a href="#footer" ><img alt="Sígueme" height="53" width="53"
                     src="https://3.bp.blogspot.com/-E4jytrbmLbY/XCrI2Xd_hUI/AAAAAAAAIAo/qXt-bJg1UpMZmTjCJymxWEOGXWEQ2mv3ACLcBGAs/s1600/twitter.png"
                     title="Sígueme" /></a>
         </section>
@@ -55,23 +55,24 @@
                         col-xs-12 contenedor1">
                 <h2>RESCATE</h2>
                 <P>ETAPA UNO</P>
-                <hr>
-                <p>Rescatamos perros en situacion de peligro y/o abandono, los rehabilitamos y los preparamos para
+                <h2>_____</h2>
+                <p>Rescatamos perros en situacion de peligro y/o abandono, los rehabilitamos y los preparamos
+                    para
                     buscarles un hogar.</p>
-                <img class="rescate" src="rescate.jpg" alt="rescate">
+                <img class="rescate" src="imagenes/rescate.jpg" alt="rescate">
             </div>
-
             <div class="col-lg-6
             col-md-6
             col-sm-12
             col-xs-12  contenedor2">
-                <img class="crowdfunding" src="crowfunding.jpg" alt="CROWDFUNDING">
+                <img class="crowdfunding" src="imagenes/crowfunding.jpg" alt="CROWDFUNDING">
                 <h2>CROWDFUNDING</h2>
                 <p>FINANCIAMINETO</p>
-                <hr>
-                <P>Sigue nuestras redes sociales para infromarte acerca de las diversas campañas y actividades que
+                <h2>_____</h2>
+                <P>Sigue nuestras redes sociales para infromarte acerca de las diversas campañas y actividades
+                    que
                     realizamos para obtener financiemitno y seguir ayudando.</P>
-                <button class="boton">CAMPAÑAS</button>
+                <button class="boton"><a target="blank" href="sitioenconstruccion.html">CAMPAÑAS</a></button>
                 <br><br>
             </div>
         </section>
@@ -82,51 +83,37 @@
                         col-md-4
                         col-sm-4
                         col-xs-4 galeria">
-                <img class="uno" src="1.jpg" alt="1">
-                <img class="dos" src="2.jpg" alt="2">
-                <img class="tres" src="3.jpg" alt="3">
+                <a href="perro1.html"><img class="uno" src="imagenes/1.jpg" alt="1"></a>
+                <a href="perro2.html"><img class="dos" src="imagenes/2.jpg" alt="2"></a>
+                <a href="perro3.html"><img class="tres" src="imagenes/3.jpg" alt="3"></a>
             </div>
             <div class="col-lg-4
                         col-md-4
                         col-sm-4
                         col-xs-4 galeria">
-
-                <img class="cuatro" src="4.jpg" alt="4">
-                <img class="cinco" src="5.jpg" alt="5">
-
+                <a href="perro4.html"><img class="cuatro" src="imagenes/4.jpg" alt="4"></a>
+                <a href="perro5.html"><img class="cinco" src="imagenes/5.jpg" alt="5"></a>
             </div>
-
             <div class="col-lg-4
                             col-md-4
                             col-sm-4
                             col-xs-4 galeria">
-                <img class="seis" src="6.jpg" alt="6">
-                <img class="siete" src="7.jpg" alt="7">
-
+                <a href="perro6.html"><img class="seis" src="imagenes/6.jpg" alt="6"></a>
+                <a href="perro7.html"><img class="siete" src="imagenes/7.jpg" alt="7"></a>
             </div>
-
-
-
-
         </Div>
     </ARTIcle>
-
     <!-- footer -->
-    <footer>
+    <footer id="footer">
         <p>¡TODOS LOS PERRITOS SE VAN AL CIELO!</p>
         <DIV class="footer">
             <UL>
                 <li class="personalizado"><a href=tel:+56931140901>+56987654321</a></li>
-                <LI class="personalizado"><a href="#">www.facebook.com</a></LI>
-                <li class="personalizado"><a href="#">www.instagram.com</a></li>
-
+                <LI class="personalizado"><a href="https://es-la.facebook.com/mascotasonline.cl/">FACEBOOK</a></LI>
+                <li class="personalizado"><a href="https://www.instagram.com/mascotas_online/?hl=es-la">INSTAGRAM</a>
+                </li>
             </UL>
         </DIV>
     </footer>
-
-
-
-
 </body>
-
 </html>
