--- a/sitioenconstruccion.html
+++ b/sitioenconstruccion.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="sitioenconstruccion.css">
+    <link rel="stylesheet" href="css/sitioenconstruccion.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
 <body>
-    <img src="sitioenconstruccion.jpg" alt="en construccion">
+    <img src="imagenes/sitioenconstruccion.jpg" alt="en construccion">
 </body>
 </html>
